[metadata]
name = pyjsf
version = 1.0.0
author = Kian Fakheri Aghdam
author_email = kianfakheriaghdam@gmail.com
description = Contains some useful functions from javascript for python.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kianfakheriaghdam/pyjsf
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True